DriverEnRoute and DriverArrived logic for both rider and driver flows

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyDeqs7L-oHz0FCPtzJswpzxdhqosiA95PM
 
 # API Base URL
-VITE_API_BASE_URL=https://ix5gkk15w7.execute-api.il-central-1.amazonaws.com/default
+VITE_API_BASE_URL=https://97z6othzn8.execute-api.il-central-1.amazonaws.com
 
 # Environment
 VITE_APP_ENV=production
