--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-localization": "^1.0.19",
-    "react-router-dom": "^7.9.1",
-    "react-spring-bottom-sheet": "^3.4.1"
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
